# CuteMica

./: .gitignore  AGENTS.md  README.md  initial_spec.txt  pyproject.toml  run_demo.ps1  setup.ps1  verify.ps1
.github/workflows/: ci.yml  macos-tester.yml  macos-wallpaper-probe.yml  screenshots.yml
packaging/: MAC_TESTER_INSTRUCTIONS.txt
src/cutemica/: __init__.py  cache.py  controller.py  enums.py  geometry.py  metrics.py  recipe.py  scheduler.py  theme.py  theme_monitor.py  viewport.py  wallpaper.py
tests/: __init__.py  test_backdrop_backing_store.py  test_backdrop_presentation.py  test_blur_plan.py  test_cache.py  test_center_linear.py  test_compositor.py  test_control_panel.py  test_controller.py  test_demo_main.py  test_demo_smoke.py  test_drag_frames.py  test_drag_result.py  test_float_blur.py  test_geometry.py  test_gnome_wallpaper.py  test_lxqt_wallpaper.py  test_macos_appkit_native.py  test_macos_wallpaper.py  test_macos_wallpaper_source.py  test_mate_wallpaper.py  test_material_field.py  test_material_painter.py  test_metrics.py  test_mixed_dpi_backdrop.py  test_motion_performance.py  test_motion_repaint.py  test_native_qt_smoke.py  test_performance_result.py  test_plasma_wallpaper.py  test_processor.py  test_progress_panel.py  test_qt_dbus.py  test_recipe.py  test_scheduler_shutdown.py  test_speed_blur.py  test_support_bundle.py  test_support_report.py  test_system_theme.py  test_system_wallpaper_provider.py  (+13 more)
tests/assets/: ci-wallpaper.ppm
tests/integration/: dbus_environment.py  macos_native_mode.py  macos_native_source_export.py  x11_session.py  (+14 more)
(+69 files in other folders)
