[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "CuteMica"
version = "0.1.0"
description = "Fast, wallpaper-derived Mica Alt for cross-platform PySide6 apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1,<3",
    "Pillow>=12.0,<13",
    "PySide6-Essentials>=6.10,<7",
    "pyobjc-framework-Cocoa>=11,<13; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-qt>=4.5,<5",
    "ruff>=0.12,<0.13",
    "twine>=6.1,<7",
]
tester-build = [
    "pyinstaller>=6.14,<7",
]

[project.scripts]
cutemica = "cutemica.demo.main:main"
cutemica-benchmark-motion = "cutemica.performance.motion:main"
cutemica-benchmark-widget-motion = "cutemica.performance.widget_motion:main"
cutemica-benchmark-native-drag = "cutemica.performance.native_drag:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cutemica"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["cutemica"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
qt_api = "pyside6"
